fix: Update tertiary color in theme for improved contrast

--- a/admin/admin/src/index.css
+++ b/admin/admin/src/index.css
@@ -7,7 +7,7 @@
 @theme {
   --color-primary: #c1e8ef36;
   --color-secondary: #43c2d1;
-  --color-tertiary: #272626;
+  --color-tertiary: #1c1b1b;
   --breakpoint-xs: 400px;
   --breakpoint-3xl: 1680px;
   --breakpoint-4xl: 2200px;
